CSS/Visual changes: album art now stretched to bottom of container fixed, plus width on music player is temporary fixed (it will be done in other ways later)

--- a/client/app/mbPlayer/mbPlayer.less
+++ b/client/app/mbPlayer/mbPlayer.less
@@ -2,15 +2,18 @@
   position: fixed;
   background-color: @gray-dark;
   top: 0;
+  width: 380px;
   /*bottom: 0;*/
   padding-top: @navbar-height;
-  & #albumArt{
-    width: 100%;
-    height: 100%; min-height: 360px;
+  & #albumArt{min-height: 360px;
     background-size: cover;
     background-position: center;
-    //    border: 1px @body-bg-alt solid;
-    //    border-radius: 4px;
+    z-index: -1;
+    position: relative;
+    bottom: 0px;
+    left: 0px;
+    top: 0px;
+    right: 0px;
   }
   & > .row {
     //    padding-top: 15px;
